--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -189,6 +189,17 @@
       $('#task-details-form').find('.submit-button').prop('disabled', true);
     })
 
+    var element = document.getElementById("volunteer_manager_email");
+
+      element.oninvalid = function(e) {
+        e.target.setCustomValidity("");
+        if (!e.target.validity.valid) {
+          e.target.setCustomValidity("This must be a valid email, and not your own");
+        }
+      };
+      element.oninput = function(e) {
+        e.target.setCustomValidity("");
+      };
   });
   function completeTaskWrite(response){
     var jsonData = JSON.parse(response);
