contact info display improvements

--- a/configuration/partials/local-contact-info.hbs
+++ b/configuration/partials/local-contact-info.hbs
@@ -21,11 +21,11 @@
         {{#if youtube}}<a href="{{fixUrl youtube}}" target="_blank"><span class="fab fa-youtube fa-fw fa-2x"></span></a>{{/if}}
       </p>
     </div>
-    {{#ifAll logo website ~}}
+    {{!-- {{#ifAll logo website ~}}
     <div class="column col-2">
       <a href="{{fixUrl website}}" target="_blank"><img src="{{logo}}" class="img-responsive" alt="{{title}}" /></a>
     </div>
-    {{/ifAll ~}}
+    {{/ifAll ~}} --}}
   </div>
 {{/if ~}}
 {{/each ~}}
