--- a/configuration/templates/page/home-authenticated.hbs
+++ b/configuration/templates/page/home-authenticated.hbs
@@ -2,8 +2,19 @@
   <div class="empty-icon">
     <span class="fal fa-user-clock fa-3x"></span>
   </div>
-  <p class="empty-title h5">You have logged {{sumArray (pluck @root.data.tasksInfo "hours")}} hours so far</p>
-  <p class="empty-subtitle"></p>
+
+  <p class="empty-title h5">
+    {{#compare (sumArray (pluck @root.data.tasksInfo "hours")) 0 ~}}
+    You haven't logged any volunteering yet
+    {{else}}
+    You have logged {{sumArray (pluck @root.data.tasksInfo "hours")}} hours so far
+    {{/compare ~}}
+  </p>
+  {{#compare (sumArray (pluck @root.data.tasksInfo "hours")) 0 ~}}
+  <p class="empty-subtitle">
+    The Saltire Awards gives you recognition for the volunteering you do.
+  </p>
+  {{/compare ~}}
   <div class="empty-action">
     {{#if @root.data.isAdmin ~}}
     <a href="/hours" class="btn btn-primary">Volunteering groups</a>
@@ -19,14 +30,21 @@
     <polygon fill="#EEF0FA" points="100,0 100,100 0,0"></polygon>
   </svg>
   <div class="container">
-    <h3>
-      Support &amp; information
-    </h3>
-    {{#if @root.data.accountInfo.postcode ~}}
-    {{> local_contact_info}}
-    {{else}}
-    If you enter a postcode on your <a href="/settings">profile</a> you'll see local contact information here. Please see the <a href="/contact">contact us</a> page for all areas.
-    {{/if ~}}
+    <div class="columns">
+      <div class="column col-9">
+        <h3>
+          Support &amp; information
+        </h3>
+        {{#if @root.data.accountInfo.postcode ~}}
+        {{> local_contact_info}}
+        {{else}}
+        If you enter a postcode on your <a href="/settings">profile</a> you'll see local contact information here. Please see the <a href="/contact">contact us</a> page for all areas.
+        {{/if ~}}
+      </div>
+      <div class="column col-3 t-margin">
+        {{> local_contact_logo}}
+      </div>
+    </div>
   </div>
 </div>
 
