--- a/configuration/templates/volunteering/achievements.hbs
+++ b/configuration/templates/volunteering/achievements.hbs
@@ -29,7 +29,7 @@
         {{!-- <p>
           {{certificate_name}} hour certificate awarded!
         </p> --}}
-        <a href="/certificate" class="btn btn-primary" download>Download</a>
+        <a href="/certificate" class="btn btn-primary b-margin" download>Download</a>
       </div>
     </div>
   </div>
