--- a/src/main.scss
+++ b/src/main.scss
@@ -710,7 +710,7 @@ form {
   margin-bottom: -($unit);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center 38%;
   min-height: $home-splash-height;
   .header-image-overlay {
     position: relative;
