added detail to group tasks

--- a/configuration/partials/local-contact-info.hbs
+++ b/configuration/partials/local-contact-info.hbs
@@ -6,7 +6,7 @@
     <div class="column col-12">
       <p class="no-margin">
         {{#if @root.data.isAdmin ~}}
-        For support administering group volunteering,
+        For support administrating group volunteering,
         {{else}}
         For information on how to get involved,
         {{/if ~}}
