--- a/src/main.scss
+++ b/src/main.scss
@@ -755,10 +755,12 @@ ul.fa-ul {
   }
 }
 
-.equal-height {
+.contact.equal-height {
   .column {
     padding-bottom: 0.8rem;
   }
+}
+.equal-height {
   .card {
     height: 100%;
   }
