--- a/src/main.scss
+++ b/src/main.scss
@@ -165,6 +165,11 @@ a.btn-link:hover {
   width: 300px;
   margin-left: -150px;
 
+  .btn:hover,
+  a {
+    color: white;
+  }
+
   .toast {
     position: relative;
     margin-top: $unit/4;
