--- a/configuration/templates/volunteering/achievements.hbs
+++ b/configuration/templates/volunteering/achievements.hbs
@@ -45,7 +45,7 @@
       </p>
       {{> badge type=type key=@key hours=hours}}
       <div class="text-center description">
-        {{certificate_name}} hour award being verified. <a href="/verify-hours-email-send/?award={{hours}}">Resend verification message</a>
+        {{certificate_name}} hour award being verified. If you've been waiting for over a week, you can <a href="/verify-hours-email-send/?award={{hours}}">re-send the verification {{inflect (length @root.data.tasksInfo) "message" "messages"}}</a>.
       </div>
     </div>
   </div>
@@ -69,7 +69,7 @@
       </p>
       {{> badge type=type key=@key hours=hours}}
       <p class="text-center description">
-        {{certificate_name}} hour certificate available! Claiming this certificate will send emails to the person or people managing your volunteering to verify the hours you've logged.
+        {{certificate_name}} hour certificate available! Claiming this certificate will send {{inflect (length @root.data.tasksInfo) "an email" "emails"}} to the {{inflect (length @root.data.tasksInfo) "person" "people"}} managing your volunteering to verify the hours you've logged.
       </p>
       <p class="text-center">
         <a href="/verify-hours-email-send/?award={{hours}}" class="btn">Claim this certificate</a>
@@ -87,7 +87,7 @@
       {{> badge type=type key=@key hours=hours disabled=true}}
       <div class="text-center description">
         <strong>{{subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))}} {{inflect (subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))) "hour" "hours"}} to go.</strong><br />
-        Once you have reached {{hours}} hours, you can request verification.
+        Once you have reached {{hours}} hours, you can request verification by the nominated {{inflect (length @root.data.tasksInfo) "person" "people"}} at the {{inflect (length @root.data.tasksInfo) "place" "places"}} you volunteer.
       </div>
     </div>
   </div>
