--- a/src/main.scss
+++ b/src/main.scss
@@ -409,6 +409,10 @@ header {
 }
 
 .saltire-badge {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
   user-select: none;
   position: relative;
   margin-bottom: $unit/2;
